# s3-crypt-vault

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
app/: cli.py  config.py  encryptor.py  exceptions.py  s3_client.py  vault.py
app/api/: dependencies.py  exceptions.py  main.py  routes.py  schemas.py
app/crypto/: envelope.py  kdf.py
tests/: test_api.py  test_encryption.py  test_s3_client.py  test_s3_connection.py  test_vault.py
