[project]
name = "s3-crypt-vault"
version = "0.2.2"
description = "Secure client-side encrypted storage system for AWS S3."
authors = [{name = "Michael Giuliano"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "boto3",
    "cryptography",
    "python-dotenv",
    "typer",
]

[project.scripts]
s3vault = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["volume*", "tests*"]